practice_test_files/probes.yaml
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: web
  name: web
spec:
  restartPolicy: Never
  containers:
  - image: nginx:alpine
    name: web
    resources: {}
    volumeMounts:
      - name: conf
        mountPath: /etc/nginx/templates
    livenessProbe:
      httpGet:
        path: /live
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 10
    readinessProbe:
      httpGet:
        path: /ready
        port: 80
      initialDelaySeconds: 15
      periodSeconds: 10
  volumes:
    - name: conf
      configMap:
