practice_test_files/ingress.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: hello-app
  labels:
    run: hello-app
spec:
  containers:
  - image: nginx:alpine
    name: hello-app
    volumeMounts:
    - name: content
      mountPath: /usr/share/nginx/html/hello
    - name: conf
      mountPath: /etc/nginx/templates
  volumes:
  - name: content
    emptyDir: {}
  - name: conf
    configMap:
      name: default-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: hello-app
  name: hello-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30123
  selector:
    run: hello-app
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello-ckad.example
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-svc
                port:
                  number: 80
