practice_test_files/netpol.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: network
spec: {}
---
apiVersion: v1
kind: Pod
metadata:
  namespace: network
  name: web
spec:
  containers:
  - image: nginx:alpine
    name: web
---
apiVersion: v1
kind: Pod
metadata:
  namespace: network
  name: api
  labels:
    role: api
spec:
  volumes:
  - name: content
  containers:
  - image: nginx:alpine
    name: api
    volumeMounts:
    - name: content
      mountPath: /usr/share/nginx/html
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: network
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: network
  name: api-ingress-policy
spec:
  podSelector:
    matchLabels:
      role: api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: web
    ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: network
  name: web-egress-policy
spec:
  podSelector:
    matchLabels:
      role: web
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: api
    ports:
    - protocol: TCP
      port: 80
---
